fix modal wrapping (#40)

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,3 +39,7 @@
 svg.ins-c-icon__active {
     fill: var(--pf-global--active-color--100);
 }
+
+.pf-c-modal-box .pf-c-title {
+    white-space: normal;
+}
